[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/timelineGraphEditor/TimelineGraphNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/timelineGraphEditor/NewTimelineNodeMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/timelineGraphEditor/LogicGraphNode.tscn" type="PackedScene" id=3]
[ext_resource path="res://themes/HistoryButton-theme.tres" type="Theme" id=4]
[ext_resource path="res://scripts/timelineGraphEditor/MenuButtonNewOperation.gd" type="Script" id=5]
[ext_resource path="res://scripts/timelineGraphEditor/timelineNodeEditor.gd" type="Script" id=6]
[ext_resource path="res://scripts/timelineGraphEditor/MenuButtonFile.gd" type="Script" id=7]
[ext_resource path="res://scenes/timelineGraphEditor/LoadTimelineStructureMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/timelineGraphEditor/SaveTimelineStructureAsMenu.tscn" type="PackedScene" id=9]

[node name="TimelineGraphEditor" type="Node2D"]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1083.0
margin_bottom = 726.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1083.0
margin_bottom = 744.0

[node name="HBoxMenu" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1083.0
margin_bottom = 40.0

[node name="MenuButtonFile" type="MenuButton" parent="MarginContainer/VBoxContainer/HBoxMenu"]
margin_right = 300.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "File"
items = [ "New Graph", null, 0, false, false, 0, 0, null, "", false, "Save", null, 0, false, false, 1, 0, null, "", false, "Load", null, 0, false, false, 2, 0, null, "", false, "Save As", null, 0, false, false, 3, 0, null, "", false ]
script = ExtResource( 7 )

[node name="ButtonNewNode" type="Button" parent="MarginContainer/VBoxContainer/HBoxMenu"]
margin_left = 304.0
margin_right = 604.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "New Timeline Node"

[node name="MenuButtonNewOperation" type="MenuButton" parent="MarginContainer/VBoxContainer/HBoxMenu"]
margin_left = 608.0
margin_right = 909.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "New Operation Node"
script = ExtResource( 5 )

[node name="CheckButtonPreviewMode" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxMenu"]
margin_left = 913.0
margin_right = 1083.0
margin_bottom = 40.0
text = "Preview Mode"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 1083.0
margin_bottom = 744.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphEdit" type="GraphEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 1083.0
margin_bottom = 700.0
rect_min_size = Vector2( 1000, 700 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
right_disconnects = true
scroll_offset = Vector2( -100, -100 )
script = ExtResource( 6 )
new_timeline_node_menu = ExtResource( 2 )
new_timeline_node = ExtResource( 1 )
new_operator_node = ExtResource( 3 )
load_timeline_structure_menu = ExtResource( 8 )
save_timeline_structure_as_menu = ExtResource( 9 )

[node name="PreviewModeDimmer" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/GraphEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/GraphEdit"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 14.0

[node name="LabelTimelineStructureName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/GraphEdit/MarginContainer"]
margin_right = 1083.0
margin_bottom = 14.0
text = "UNNAMED"
align = 1
valign = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxMenu/ButtonNewNode" to="MarginContainer/VBoxContainer/HBoxContainer/GraphEdit" method="_on_ButtonNewNode_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxMenu/CheckButtonPreviewMode" to="MarginContainer/VBoxContainer/HBoxContainer/GraphEdit" method="_on_CheckButtonPreviewMode_toggled"]
[connection signal="_end_node_move" from="MarginContainer/VBoxContainer/HBoxContainer/GraphEdit" to="MarginContainer/VBoxContainer/HBoxContainer/GraphEdit" method="_on_GraphEdit__end_node_move"]
[connection signal="connection_request" from="MarginContainer/VBoxContainer/HBoxContainer/GraphEdit" to="MarginContainer/VBoxContainer/HBoxContainer/GraphEdit" method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="MarginContainer/VBoxContainer/HBoxContainer/GraphEdit" to="MarginContainer/VBoxContainer/HBoxContainer/GraphEdit" method="_on_GraphEdit_disconnection_request"]
[connection signal="node_selected" from="MarginContainer/VBoxContainer/HBoxContainer/GraphEdit" to="MarginContainer/VBoxContainer/HBoxContainer/GraphEdit" method="_on_GraphEdit_node_selected"]
